# x-py

./: .gitignore  CHANGELOG.md  LICENSE  README.md  meta.txt  pyproject.toml
.github/workflows/: python-ci.yml
choco/: README.md  pyproject.toml
choco/examples/: basic.py  chaining.py  events.py  wildcards.py
choco/src/choco/: __init__.py  action.py  dispatcher.py  event.py  events.py  handler.py
choco/tests/: test_events.py
logically/: README.md  pyproject.toml
logically/examples/: basic_rule.py  custom_evaluator.py  decision_example.py  errors_example.py  graph_example.py
logically/src/logically/: __init__.py  condition.py  decision.py  errors.py  graph.py  intent.py  rule.py  types.py
logically/tests/: test_condition.py  test_decision.py  test_errors.py  test_graph.py  test_intent.py  test_rule.py
